crates/shannon-mcp/tests/snapshots/tools_call_snapshot__tool_content_text_pair.snap
---
source: crates/shannon-mcp/tests/tools_call_snapshot.rs
expression: value
---
{
  "content": [
    {
      "text": "first line",
      "type": "text"
    },
    {
      "text": "second line",
      "type": "text"
    }
  ]
}
